yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 850471083155.dkr.ecr.us-west-2.amazonaws.com/flaskapp:latest
        ports:
        - containerPort: 5000
