yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testsvc
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
